CI: fixing handling grep's exit code

--- a/tox.ini
+++ b/tox.ini
@@ -67,8 +67,8 @@ commands =
     # Make a list of all the tutorials to be reused in multiple filtering commands below
     bash -c 'find tutorials -name "*md" > all_tutorials'
 
-    # Make a list of the tutorials changed, we only need this in CI.
-    bash -c 'if [[ $CI == true ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; fi > changed_tutorials'
+    # Make a list of the tutorials changed, we only need this in CI. Also deal with grep's non-zero exit code.
+    bash -c 'if [[ $CI == true ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep ".md" || true; fi > changed_tutorials'
 
     # We only skip testing untouched tutorials in PRs; in cron and dispatch all should be tested
     !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then cat changed_tutorials; else cat all_tutorials; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
