--- a/deploy_to_fornax_manifest.in
+++ b/deploy_to_fornax_manifest.in
@@ -22,6 +22,8 @@ tutorials/parquet-catalog-demos/irsa-hats-with-lsdb.md
 tutorials/parquet-catalog-demos/neowise-source-table-lightcurves.md
 tutorials/parquet-catalog-demos/neowise-source-table-strategies.md
 tutorials/parquet-catalog-demos/wise-allwise-catalog-demo.md
+tutorials/parquet-catalog-demos/euclid-q1-hats/1-euclid-q1-hats-intro.md
+tutorials/parquet-catalog-demos/euclid-q1-hats/4-euclid-q1-hats-magnitudes.md
 tutorials/roman_simulations/roman_hlss_number_density.md
 tutorials/spherex/spherex_intro.md
 tutorials/spherex/spherex_cutouts.md
