CI: circleci config cleanup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,13 @@
 version: 2.1
 
-
 jobs:
+
   build-docs:
     docker:
-      - image: cimg/python:3.12
+      - image: cimg/python:3.13-node
+
     steps:
       - checkout
-
-      - run:
-          name: Install Node.js
-          command: |
-            curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-
-      - run:
-          name: Install mystmd
-          command: |
-            npm install mystmd
 
       - run:
           name: Install Python dependencies
@@ -25,7 +15,7 @@ jobs:
             python -m pip install --upgrade pip tox
 
       - run:
-          name: Build documentation
+          name: Build HTML rendering of notebooks
           no_output_timeout: 60m
           environment:
             # Ensure this is same as store_artifacts path below
@@ -33,8 +23,7 @@ jobs:
           command: |
             export BASE_URL="/output/job/$CIRCLE_WORKFLOW_JOB_ID/artifacts/0/$DOCS_PATH"
             export OMP_NUM_THREADS=1
-            python -m tox -e py312-buildhtml
-
+            python -m tox -e py313-buildhtml
 
       - store_artifacts:
           path: _build/html
