BUG: fix command logic

--- a/tox.ini
+++ b/tox.ini
@@ -80,10 +80,10 @@ commands =
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
 
     # We don't want to execute in rendering the ones we ignore for testing
-    buildhtml: bash -c 'grep -f ignore_testing all_tutorials || true > ignore_execute'
+    buildhtml: bash -c '(grep -f ignore_testing all_tutorials || true) > ignore_execute'
 
     # On CircleCI rendering preview, we also don't want to execute anything that hasn't been modified
-    buildhtml: bash -c 'if [[ $CIRCLECI == true ]]; then grep -vf changed_tutorials all_tutorials || true >> ignore_execute; fi'
+    buildhtml: bash -c 'if [[ $CIRCLECI == true ]]; then (grep -vf changed_tutorials all_tutorials || true) >> ignore_execute; fi'
 
     # sed -i needs a bit of hacky conditional on ubuntu to cover the case of an empty ignore
     buildhtml: bash -c 'if [ -s ignore_execute ]; then for name in $(cat ignore_execute | sort| uniq); do if [ -z "$(head -n 20 ${name}| grep execute:)" ]; then sed -i -e "s|kernelspec:|execute:\n  skip: true\nkernelspec:|g" ${name}; fi; done;fi'
