Making sure logic is correctly applied

--- a/tox.ini
+++ b/tox.ini
@@ -70,7 +70,7 @@ commands =
     bash -c 'find tutorials -name "*md" | xargs grep kernelspec: | awk -F :kernelspec: "{print \$1}" > all_tutorials'
 
     # Make a list of the tutorials changed, we only need this in CI. Also deal with grep's non-zero exit code. Deleted files are ignored.
-    bash -c 'if [[ $CI == true ]]; then git fetch origin main --depth=1; git diff origin/main --name-only --diff-filter=d tutorials | grep ".md" || true; fi > changed_tutorials'
+    bash -c 'if [[ $CI == true ]]; then git fetch origin main --depth=1; git diff origin/main --name-only --diff-filter=d tutorials | (grep ".md" || true); fi > changed_tutorials'
 
     # We only skip testing untouched tutorials in PRs; in cron and dispatch all should be tested. Make sure we don't jupytext non-notebook files.
     !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then grep -f changed_tutorials all_tutorials; else cat all_tutorials; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
