--- a/myst.yml
+++ b/myst.yml
@@ -7,6 +7,7 @@ project:
   keywords: [astronomy]
   authors: [IRSA Scientists and Developers]
   github: https://github.com/Caltech-IPAC/irsa-tutorials/
+  license: BSD-3-Clause
   jupyter:
     binder:
       repo: https://github.com/Caltech-IPAC/irsa-tutorials/
